# avro-finetune

./: .env.example  .gitignore  DEPLOYMENT.md  EXPORT_LIMITATIONS.md  FEATURE_CONFIG.md  README.md  TRAIN_DOCUMENTATION.md  cleanup.py  cleanup_adapters.py  dataset_minimal.jsonl  evaluate.py  evaluate_configurable.py  export_ollama_docker.py  generate_model_name.py  merge_and_export.py  prepare_data.py  publish.py  pyproject.toml  test_export_e2e.sh  test_workflows.sh  train.py  train_configurable.py
.github/workflows/: README.md  WORKFLOWS_GUIDE.md  export-and-publish.yml  export-complete.yml  export-models-v2.yml  export-models.yml  finetune-and-evaluate.yml  publish-huggingface.yml  test-deployment.yml  test-setup.yml  train-and-deploy.yml  train-and-export.yml  upload-adapters.yml
docs/: DEPLOYMENT.md  VERSIONING.md
